@@ -71,10 +71,10 @@ public class CqlReader extends CqlOperation<ByteBuffer[][]>
     }
 
     @Override
-    protected CqlRunOp<ByteBuffer[][]> buildRunOp(ClientWrapper client, String query, Object queryId, List<Object> params, ByteBuffer key)
+    protected CqlRunOp<ByteBuffer[][]> buildRunOp(QueryExecutor<?> queryExecutor, List<Object> params, ByteBuffer key)
     {
         List<ByteBuffer> expectRow = getColumnValues();
-        return new CqlRunOpMatchResults(client, query, queryId, params, key, Arrays.asList(expectRow));
+        return new CqlRunOpMatchResults(queryExecutor, params, key, Arrays.asList(expectRow));
     }
 
 }
